# mcp-atlassian

./: pyproject.toml
src/mcp_atlassian/: __init__.py
src/mcp_atlassian/servers/: main.py
src/mcp_atlassian/utils/: _fastmcp_compat.py
